# bloggy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  functional_tests.py  pyproject.toml
mysite/: settings.py  urls.py
mysite/apps/blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/apps/blog/migrations/: 0001_initial.py  0002_comment.py  0003_post_tags.py
mysite/apps/blog/templates/blog/post/: detail.html  list.html  search.html
mysite/blog/: feeds.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_comment.py  0003_post_tags.py
mysite/blog/templates/: pagination.html
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: detail.html  latest_posts.html  list.html
mysite/blog/templatetags/: blog_tags.py
mysite/mysite/: settings.py  urls.py
mysite/templates/: base.html
