[tool.poetry]
name = "bloggy"
version = "0.1.0"
description = "A simple blog application built with the django web framework"
authors = ["Samwel Kanda"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.3"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
